--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/mfargas/tetris#readme",
   "dependencies": {
+    "esm": "^3.2.25",
     "express": "^4.17.1"
   }
 }
